# LearningOpenGL

./: .gitignore  CMakeLists.txt  Shader.h  glad.c  glfw3Config.cmake  main.cpp
shaders/: fragmentShader.glsl  vertexShader.glsl
